<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.028"
            app:srcCompat="@drawable/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameR"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_firstName"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxStrokeColor="@color/teal_700"
            app:layout_constraintTop_toBottomOf="@id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstNameInputID"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameR"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_lastName"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxStrokeColor="@color/teal_700"
            app:layout_constraintTop_toBottomOf="@id/firstNameR"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastNameInputID"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/locationDropdownText"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_location"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:layout_constraintTop_toBottomOf="@id/lastNameR"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp">

            <AutoCompleteTextView
                android:id="@+id/locationDropdown"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailR"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxStrokeColor="@color/teal_700"
            app:layout_constraintTop_toBottomOf="@id/locationDropdownText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInputID"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordR"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxStrokeColor="@color/teal_700"
            app:layout_constraintTop_toBottomOf="@id/emailR"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInputRegID"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/termsID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/termsAndConditions"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@id/passwordR"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp" />

        <Button
            android:id="@+id/registerBtnID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            app:layout_constraintTop_toBottomOf="@id/termsID"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="537dp"
        android:layout_height="171dp"
        android:layout_marginTop="8dp"

        android:rotation="180"
        app:layout_constraintTop_toBottomOf="@+id/registerBtnID"
        app:srcCompat="@drawable/tilt"
        tools:layout_editor_absoluteX="-50dp" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="389dp"
        android:layout_height="129dp"
        android:layout_marginTop="52dp"
        android:rotation="180"
        android:rotationY="180"
        app:layout_constraintTop_toBottomOf="@+id/registerBtnID"
        app:srcCompat="@drawable/tiltb"
        tools:layout_editor_absoluteX="25dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
